infrastructure/base/cloudnative-pg/cloudnative-pg.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-cloudnative-pg
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
  ingress:
    - fromEntities:
        - kube-apiserver
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
            app.kubernetes.io/name: postgresql
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "9187"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
